--- a/content/w12.html
+++ b/content/w12.html
@@ -142,6 +142,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w12</h1>
+<p><em>第一題：input()與 print()</em></p>
+<p><em>範例:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/9b3cdafc23f4b2f5c869e20119829369e0cee787/hw12-1.py">你的名字</a></em></p>
+<p><em><span>    說明：input為輸入()中為問題,使用者輸入之答案會變成返回的值</span></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">input("你叫什麼?")</pre>
+<p><em><span></span></em></p>
 <p></p><br />w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
