--- a/content/w12.html
+++ b/content/w12.html
@@ -198,7 +198,19 @@ if item_to_remove in shopping_list: #如果 想要移除的物品在購物清單
 else:                     #反之
     print (item_to_remove + " is/are not in the list") #列印 想要移除的物品+is/are not in the list(不在清單中)
     print (shopping_list) #列印購物清單</pre>
-<p><em></em></p><br />w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
+<p><em>第五題：index().pop()和insert()</em></p>
+<p><span>說明：index()用於從列表中找出某個述職的位置</span></p>
+<p><span>             pop()用於將列標表中的元素移除(默認為最後一個)</span></p>
+<p><span>             insert用於將字串插入</span></p>
+<p><span>Q5範例程式：<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/ed948c00f38430adf8a1b25baba21b2bb9aaf36c/hw12-5.py">今日菜單</a></span></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">todays_menu = ["拉麵", "糖心蛋", "涼拌小黃瓜"] #todays_menu變數=今天菜單["burger", "salad", "coke"
+side_dish_index = todays_menu.index("拉麵") #side_dish_index變數 = 今日菜單.找出"沙拉"位於字串中第幾個
+print (side_dish_index) #列印side_dish_index  列印他在第幾位
+todays_menu.pop(side_dish_index) #今日菜單.移除字串中的元素(side_dish_index變數"沙拉")  這裡意思是移除沙拉
+print (todays_menu) #列印今日菜單
+todays_menu.insert(side_dish_index, "唐揚雞") #今日菜單.在字串中插入(side_dish_index, "fries")   這裡意思是加入薯條
+print (todays_menu) #列印今日菜單</pre>
+<p></p><br />w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
