--- a/config/content.htm
+++ b/config/content.htm
@@ -48,6 +48,11 @@
 <p><span>3.清除輸出區</span></p>
 <p><span>4.貼上程式一的原始碼</span></p>
 <p><span>5.Run</span></p>
+<p><span>SciTE 編輯器</span></p>
+<p><span>1.開啟SciTE 編輯器</span></p>
+<p><span>2.儲存檔案</span></p>
+<p><span>3.貼上程式一的原始碼</span></p>
+<p><span>4.Tool--Go</span></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
