--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -48,32 +48,8 @@
 <p><span>3.清除輸出區</span></p>
 <p><span>4.貼上程式一的原始碼</span></p>
 <p><span>5.Run</span></p>
-<p><span>SciTE 編輯器</span></p>
-<p><span>1.開啟SciTE 編輯器</span></p>
-<p><span>2.儲存檔案</span></p>
-<p><span>3.貼上程式一的原始碼</span></p>
-<p><span>4.Tool--Go</span></p>
-<p><span>命令提示字元視窗</span></p>
-<p><span>1.開啟命令提示字元視窗</span></p>
-<p><span>2.輸入cmd</span></p>
-<p><span>3.輸入python</span></p>
-<p><span>4.貼上程式一的原始碼</span></p>
-<p><span>Jupyter Lab</span></p>
-<p><span>1.開啟命令提示字元視窗</span></p>
-<p><span>2.輸入cd notebook</span></p>
-<p><span>3.輸入jupyter lab --collaborative</span></p>
-<p><span>4.進入Jupyter Lab網頁</span></p>
-<p><span>5.建立new launcher</span></p>
-<p><span>6.貼上程式一的原始碼</span></p>
-<p><span>7.執行</span></p>
-<p><span>Codespaces</span></p>
-<p><span>1.新增檔案 /檔案名稱.py</span></p>
-<p><span>2.安裝python模組</span></p>
-<p><span>3.新增終端機</span></p>
-<p><span>4.貼上程式一的原始碼</span></p>
-<p><span>5.輸入python exam.py</span></p>
-<p><span>6.執行</span></p>
-<p><span>心得:</span></p>
+<p><span></span></p>
+<p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 Topic 1 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
