--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -53,6 +53,11 @@
 <p><span>2.儲存檔案</span></p>
 <p><span>3.貼上程式一的原始碼</span></p>
 <p><span>4.Tool--Go</span></p>
+<p><span>命令提示字元視窗</span></p>
+<p><span>1.開啟命令提示字元視窗</span></p>
+<p><span>2.輸入cmd</span></p>
+<p><span>3.輸入python</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
