--- a/content/w10.html
+++ b/content/w10.html
@@ -160,6 +160,14 @@ img.add_border {
 <p><span>2.輸入cmd</span></p>
 <p><span>3.輸入python</span></p>
 <p><span>4.貼上程式一的原始碼</span></p>
+<p><span>Jupyter Lab</span></p>
+<p><span>1.開啟命令提示字元視窗</span></p>
+<p><span>2.輸入cd notebook</span></p>
+<p><span>3.輸入jupyter lab --collaborative</span></p>
+<p><span>4.進入Jupyter Lab網頁</span></p>
+<p><span>5.建立new launcher</span></p>
+<p><span>6.貼上程式一的原始碼</span></p>
+<p><span>7.執行</span></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><br />HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
