--- a/config/content.htm
+++ b/config/content.htm
@@ -73,6 +73,7 @@
 <p><span>4.貼上程式一的原始碼</span></p>
 <p><span>5.輸入python exam.py</span></p>
 <p><span>6.執行</span></p>
+<p>操作影片:<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/fHQTkMyU6MI?si=_ff75-DIeE5m_OM4" title="YouTube video player" width="560"></iframe></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
