--- a/content/w10.html
+++ b/content/w10.html
@@ -175,6 +175,7 @@ img.add_border {
 <p><span>4.貼上程式一的原始碼</span></p>
 <p><span>5.輸入python exam.py</span></p>
 <p><span>6.執行</span></p>
+<p>操作影片:<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/fHQTkMyU6MI?si=_ff75-DIeE5m_OM4" title="YouTube video player" width="560"></iframe></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><br />HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
