--- a/config/content.htm
+++ b/config/content.htm
@@ -211,7 +211,9 @@ print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 
 <h2>w13</h2>
 <h3>w13_hw</h3>
 <p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p>
-<p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/5b21230ff1545511ff7eb87dcbbbbda429eeb668/w13-1.py">繪製兩個紅色正方形及對角線</a></p><h3>w14_ex</h3>
+<p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/5b21230ff1545511ff7eb87dcbbbbda429eeb668/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
+<p></p>
+<p>2.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/4e713beb758d844b5ac162f7d6644210af5b13a7/13-2.py">加上外切圓</a></p><h3>w14_ex</h3>
 <h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
